--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,11 @@
     <string name="drawer_open">drawer_open</string>
     <string name="drawer_close">drawer_close</string>
 
-
+    <!-- CaseOverView fragment-->
+    <string name="case_factory_selected">"Principal manufacturers"</string>
+    <string name="case_person_in_charge_selected">"Case officer"</string>
+    <string name="case_percent_selected">"Case progress"</string>
+    <string name="case_hours_passed_by">"Hours passed by"</string>
+    <string name="case_hours_unfinished">"Hours not yet completed"</string>
+    <string name="case_hours_forecast">"Expect delays/early hours"</string>
 </resources>
