--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -6,10 +6,12 @@
     <string name="task_progress_pause">暫停</string>
 
     <!-- CaseOverView fragment-->
+    <string name="case_spinner_all_vendors">"全部廠商"</string>
     <string name="case_factory_selected">"委託廠商"</string>
     <string name="case_person_in_charge_selected">"案件負責人"</string>
     <string name="case_percent_selected">"案件進度"</string>
     <string name="case_hours_passed_by">"已經進行時數"</string>
     <string name="case_hours_unfinished">"尚未完成時數"</string>
     <string name="case_hours_forecast">"預計延遲/提早時數"</string>
+    <string name="case_finished">"完成"</string>
 </resources>
