--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,14 +11,25 @@
     <string name="task_progress_in_schedule">In schedule</string>
     <string name="task_progress_working">Working</string>
     <string name="task_progress_pause">Pause</string>
+    <string name="task_progress_finish">Finish</string>
 
     <!-- CaseOverView fragment-->
     <string name="case_spinner_all_vendors">"All factories"</string>
-    <string name="case_factory_selected">"Principal manufacturers"</string>
+    <string name="case_vendor_selected">"Principal manufacturers"</string>
     <string name="case_person_in_charge_selected">"Case officer"</string>
     <string name="case_percent_selected">"Case progress"</string>
     <string name="case_hours_passed_by">"Hours passed by"</string>
     <string name="case_hours_unfinished">"Hours not yet completed"</string>
     <string name="case_hours_forecast">"Expect delays/early hours"</string>
     <string name="case_finished">"Finished"</string>
+    <string name="case_overview_edit_case">"Edit"</string>
+    <string name="case_overview_worker">"Workers"</string>
+    <string name="case_overview_listview_taskitem_header_id">"ID"</string>
+    <string name="case_overview_listview_taskitem_header_status">"Status"</string>
+    <string name="case_overview_listview_taskitem_header_name">"Name"</string>
+    <string name="case_overview_listview_taskitem_header_expect_time">"Expected time"</string>
+    <string name="case_overview_listview_taskitem_header_work_time">"Work time"</string>
+    <string name="case_overview_listview_taskitem_header_tool">"Tool"</string>
+    <string name="case_overview_listview_taskitem_header_warning">"Warning"</string>
+    <string name="case_overview_listview_taskitem_header_worker">"Duty"</string>
 </resources>
