--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -43,4 +43,7 @@
         <item>"日"</item>
     </string-array>
 
+    <!-- WorkerOverView fragment-->
+    <string name="worker_ov_all_factories">"全部工廠"</string>
+
 </resources>
